# cyber-trace

./: .env.example  .gitignore  PLAN.md  docker-compose.yml  schema.sql
.github/workflows/: deploy.yml
backend/: alembic.ini  cybertrace_dump.sql  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/models/: __init__.py  alert.py  attack_category.py  attack_dim.py  date_dim.py  department.py  incident_fact.py  system_dim.py  user_dim.py
backend/app/routers/: alerts.py  analytics.py  attacks.py  departments.py  incidents.py  systems.py  users.py
backend/app/schemas/: alert.py  analytics.py  attack.py  department.py  incident.py  system.py  user.py
backend/app/services/: alert_service.py  analytics_service.py  incident_service.py
backend/tests/: conftest.py  test_analytics.py  test_incidents.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.json
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/api/: alerts.ts  analytics.ts  attacks.ts  client.ts  incidents.ts  systems.ts  users.ts
frontend/src/components/: AlertSnackbar.tsx  ConfirmDialog.tsx  DataTable.tsx  SeverityBadge.tsx  confirm-dialog.tsx  page-header.tsx  severity-badge.tsx  status-badge.tsx
frontend/src/hooks/: useAlerts.ts  useApi.ts
frontend/src/lib/: constants.ts  types.ts  utils.ts
frontend/src/types/: analytics.ts  attack.ts  incident.ts  system.ts  user.ts
frontend/src/utils/: constants.ts  formatDate.ts
(+49 files in other folders)
