[project]
name = "cybertrace"
version = "0.1.0"
description = "Security Incident Logging & Analysis System"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0.36",
    "pymysql>=1.1.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "email-validator>=2.0.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
